# Educational_platform

./: .env.exampel  .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pylintrc  pyproject.toml  text.txt
educational_platform/: manage.py  pyproject.toml
educational_platform/constant/: annotations.py  costants.py  mixin.py
educational_platform/educational_platform/: asgi.py  settings.py  urls.py  wsgi.py
educational_platform/mentorship/: admin.py  endpoints.py  models.py  serializers.py  tests.py  urls.py  views.py
educational_platform/mentorship/migrations/: 0001_create_model_Teacher.py  0001_initial.py  0002_create_model_Student.py  0002_student.py  0003_create_model_Group.py  0003_group.py
educational_platform/study/: admin.py  endpoints.py  models.py  serializers.py  urls.py  views.py
educational_platform/study/migrations/: 0001_create_model_Specialization.py  0001_initial.py  0002_create_model_Course.py  0003_create_model_Article.py  0004_create_model_Image.py  0005_create_model_Topic.py  0006_alter_topic_options.py
educational_platform/testing_system/: admin.py  endpoints.py  models.py  serializers.py  urls.py  views.py
educational_platform/testing_system/migrations/: 0001_create_model_test.py  0002_create_model_Questions.py  0003_create_model_Ansver.py
educational_platform/user/: backends.py  endpoints.py  jwt.py  models.py  serializers.py  tests.py  urls.py  views.py
educational_platform/user/migrations/: 0001_create_model_User.py  0001_initial.py
